<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Therapy</string>
    <string name="app_version">Therapy, Version 1.0</string>
    <string name="api_version">2.3</string>
    
    <string name="action_settings">Settings</string>
    <string name="no_internet">Please check your Internet connection before using Constant Therapy</string>
    <string name="empty_login">Please enter username and password</string>
    <string name="select_date">Please select a date range</string>
    <string name="no_data">No data to display</string>
    
    <string name="see_more">see more</string>
    <string name="complete">completed</string>
    <string name="alltime">All Time</string>
    <string name="loginas">Logged in as</string>
    <string name="start">Start</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="save_settings">Save Settings</string>
    <string name="do_now">Do Now</string>
    <string name="clear">Clear</string>
    
    <string name="pick_patient">Please pick a patient</string>
    <string name="conti">Continue</string>
    <string name="logout_sure">Are you sure you want to logout?</string>
    <string name="yes"> Yes </string>
    <string name="no"> No </string>
    <string name="ok"> Okay </string>
    <string name="oop">Oops!</string>
    <string name="signup">Sign Up</string>
    
    <string name="login_with">Please login with your username and password</string>
    <string name="login">Login</string>
     <string name="logout">Logout</string>
     
    <string name="forget_password">Forgot your username or password? click here</string>
    <string name="nodrag_data">Drag and drop tasks from the left to create homework for this patient</string>
    <string name="change_patient">Do you want to change the currently selected patient? You will lose any unsaved changes you have made the schedule</string>
   
    <string name="dashboare_title">Constant Therapy</string>
    <string name="setting">Settings</string>
    <string name="generalsetting">General settings</string>
    <string name="updateaccount">Update Account</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="help">Help</string>
    <string name="notes">Notes</string>
    <string name="message">Messages</string>
    <string name="performance">Performance</string>
    <string name="summary">Summary</string>
    <string name="tasks">Tasks</string>
    <string name="today">Today</string>
    <string name="task_count">Task Count</string>
    <string name="duration">Duration</string>
    <string name="search">search</string>
    <string name="all_tasks">All Tasks</string>
    <string name="homework">Homework Assignment</string>
    <string name="task">Task</string>
    <string name="baseline">Baseline</string>
    <string name="current">Current</string>
    <string name="save">Save</string>
    <string name="restore">Restore</string>
    <string name="save_task">Saved Schedule</string>
    <string name="patient">patient</string>
    <string name="simple_mode">Simple Mode</string>
    <string name="advanced_mode">Advanced Mode</string>
    <string name="home">Home</string>
    <string name="skip">Skip</string>
    <string name="progress">Progress</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="pleasepick">Please pick from below</string>
    <string name="check_answer">Check Answer</string>
    <string name="enter_response">Please enter a response first</string>
    <string name="resource_url">http://s3.amazonaws.com/CT-resources/</string>
     <string name="level">Difficulty Level:</string>
    
    <string name="login_error">Expecting object found: \"Incorrect login credentials\"</string>
    <string name="error_login">Incorrect login credentials</string>
    <string name="session">Invalid access token</string>
    <string name="end_session">You have been logged in on another device. Please login again.</string>
    <string name="rightorleft">Is this patient left or right handed?</string>
    <string name="alert_microphone">Since we don’t have access to microphone in these devices, please continue by choosing the next available task</string>

     <string name="cancel">Cancel</string>
    <string name="update_title">Update your Information below</string>
    <string name="ph_no">Phone Number:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="change_pass">Change Password</string>
    <string name="txtEmail">Email:</string>
    <string name="current_pwd">Current password:</string>
    <string name="new_pwd">New Password:</string>
    <string name="repeat_pwd">Repeat Password:</string>
    <string name="change_pwd_title">Change your Password below</string>
    <string name="submit">Submit</string>
    <string name="hint_email">email address</string>
    <string name="hint_pno">phone number</string>
    <string name="hint_fname">first name</string>
    <string name="hint_lname">last name</string>
    
    <string name="error_password_title">Error Changing Password</string>
    <string name="error_msg_pwd_change">Please make sure you enter the correct current password.</string>
    <string name="is_empty">Please fill out all of the fileds</string>
    <string name="mismatch">Please make sure the two new passwords match.</string>
    
    <string name="validEmail">Please enter a valid email address.</string>
    <string name="alreadyExists">Your selected email address is already in use. Please try a different email address.</string>
    
    <string name="title_activity_web_signup">WebSignupActivity</string>

    <string name="thank_you">Thank you</string>

    <string name="sample_form_text">Sample form text for WizarDroid example</string>
    <string name="hint_firstname">Whatafirstname</string>
    <string name="hint_lastname">Speciallastname</string>
    <string name="sample_form_summary">This is a summary.  Exciting.</string>
    
    <!-- WizarDroid -->
    <string name="action_previous">Back</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="remove_patient_wizard_select_user_title">Please select a user you want to remove from your care</string>
    <string name="remove_patient_wizard_transfer_who">Transfer USERNAME to Constant Therapy Direct</string>
    <string name="remove_patient_wizard_disable">No, please disable user account</string>
    <string name="remove_patient_wizard_indicate_reason">Are you sure you want to discontinue and disable this user\'s account?  Please indicate the reason for discontinuing the service.</string>
    <string name="remove_patient_wizard_to_reactivate_email_support">If the user wants to reactivate their account, please contact support@constanttherapy.com</string>
    <string name="remove_patient_wizard_disable_account">Disable Account</string>
    
    

</resources>
