<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/lin_outer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/popup_bg"
        android:orientation="vertical"
        android:weightSum="10" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25"
            android:background="@color/white"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.25"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:text="@string/cancel"
                android:textColor="@color/title_blue"
                android:textSize="@dimen/update_title" />

            <com.constant_therapy.widget.CTTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/update_title"
                android:textColor="@color/black"
                android:textSize="@dimen/update_title" />

            <Button
                android:id="@+id/updateSave"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="0.25"
                android:background="@color/white"
                android:gravity="right|center_vertical"
                android:text="@string/save"
                android:textColor="@color/title_blue"
                android:textSize="@dimen/update_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25"
            android:orientation="horizontal"
            android:weightSum="1" >

            <com.constant_therapy.widget.CTTextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.4"
                android:gravity="left|center"
                android:text="@string/txtEmail"
                android:textColor="@color/black"
                android:textSize="@dimen/txtUpdate" />

            <EditText
                android:id="@+id/txt_Email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_weight="0.6"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25"
            android:orientation="horizontal"
            android:weightSum="1" >
            
            <com.constant_therapy.widget.CTTextView
                android:id="@+id/phn_no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.4"
                android:gravity="left|center"
                android:text="@string/ph_no"
                android:textColor="@color/black"
                android:textSize="@dimen/txtUpdate" />

            <EditText
                android:id="@+id/txt_phn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="0.6"
                android:hint="@string/hint_pno"
                android:inputType="phone" />
        </LinearLayout>
        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25"
            android:orientation="horizontal"
            android:weightSum="1" >

            <com.constant_therapy.widget.CTTextView
                android:id="@+id/fname"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.4"
                android:gravity="left|center"
                android:text="@string/first_name"
                android:textColor="@color/black"
                android:textSize="@dimen/txtUpdate" />

            <EditText
                android:id="@+id/txt_fname"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_weight="0.6"
                android:hint="@string/hint_fname"
                android:inputType="textPersonName" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25"
            android:orientation="horizontal"
            android:weightSum="1" >

            <com.constant_therapy.widget.CTTextView
                android:id="@+id/lname"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.4"
                android:gravity="left|center"
                android:text="@string/last_name"
                android:textColor="@color/black"
                android:textSize="@dimen/txtUpdate" />

            <EditText
                android:id="@+id/txt_lname"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_weight="0.6"
                android:hint="@string/hint_lname"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="horizontal" >
            
            <Button
                android:id="@+id/btnChangePwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/login_gray"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/change_pass"
                android:textColor="@color/white"
                android:textSize="@dimen/update_title" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>