<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="5dp" >

    <com.constant_therapy.widget.CTTextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:text="@string/oop"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txt_dialogtitle"
        android:textStyle="bold" />

    <com.constant_therapy.widget.CTTextView
        android:id="@+id/etsearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/no_internet"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txt_message" />

    <Button
        android:id="@+id/btncancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etsearch"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/btn_orange"
        android:text="@string/ok"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_ok" />

</RelativeLayout>