<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/popup_bg"
        android:orientation="vertical"
        android:weightSum="10" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25"
            android:background="@color/white"
            android:gravity="center"
            android:weightSum="1" >

            <com.constant_therapy.widget.CTTextView
                android:id="@+id/pwdCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.25"
                android:gravity="left|center"
                android:text="@string/cancel"
                android:textColor="@color/title_blue"
                android:textSize="@dimen/update_title" />

            <com.constant_therapy.widget.CTTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="0.75"
                android:ellipsize="marquee"
                android:gravity="left|center"
                android:singleLine="true"
                android:text="@string/change_pwd_title"
                android:textColor="@color/black"
                android:textSize="@dimen/update_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25"
            android:orientation="horizontal"
            android:weightSum="1" >

            <com.constant_therapy.widget.CTTextView
                android:id="@+id/curr_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.4"
                android:gravity="left|center"
                android:text="@string/current_pwd"
                android:textColor="@color/black"
                android:textSize="@dimen/txtUpdate" />

            <EditText
                android:id="@+id/txt_currPwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_weight="0.6"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25"
            android:orientation="horizontal"
            android:weightSum="1" >

            <com.constant_therapy.widget.CTTextView
                android:id="@+id/new_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.4"
                android:gravity="left|center"
                android:text="@string/new_pwd"
                android:textColor="@color/black"
                android:textSize="@dimen/txtUpdate" />

            <EditText
                android:id="@+id/txt_newPwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="0.6"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25"
            android:orientation="horizontal"
            android:weightSum="1" >

            <com.constant_therapy.widget.CTTextView
                android:id="@+id/repPwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.4"
                android:gravity="left|center"
                android:text="@string/repeat_pwd"
                android:textColor="@color/black"
                android:textSize="@dimen/txtUpdate" />

            <EditText
                android:id="@+id/txt_repPwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_weight="0.6"
                android:inputType="textPassword" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="horizontal" >
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.50"
            android:gravity="center"
            android:weightSum="2"
            android:orientation="horizontal" >
            
            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_weight="0.6"
                android:background="@color/login_gray"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/update_title" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>