<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/head"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="@drawable/roundedcorner"
        android:orientation="vertical"
        android:weightSum="5" >

        <com.constant_therapy.widget.CTTextView
            android:id="@+id/cTTextView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/generalsetting"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_items" />

        <LinearLayout
            android:id="@+id/llUpdate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
           android:background="@drawable/selector"
            android:orientation="vertical" >

            <com.constant_therapy.widget.CTTextView
                android:id="@+id/tvUpdate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/updateaccount"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_middletitle" />
        </LinearLayout>

        <com.constant_therapy.widget.CTTextView
            android:id="@+id/cTTextView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rightorleft"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_items" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:orientation="horizontal"
            android:padding="3dp" >

           <com.constant_therapy.widget.MySwitch
                xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
                android:id="@+id/switch1"
                style="@style/mySwitchStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                mySwitch:orientation="horizontal"
                mySwitch:switchMinHeight="@dimen/switch_height"
                mySwitch:switchMinWidth="@dimen/switch_width"
                mySwitch:textOff="Left"
                mySwitch:textOn="Right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLogout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
           android:background="@drawable/selector"
            android:orientation="vertical" >

            <com.constant_therapy.widget.CTTextView
                android:id="@+id/tvLogout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="@dimen/patient_name" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>